<resources>
    <string name="app_name">万物指南</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <!--splash-->
    <string name="splash_jump">跳过</string>
    <string name="dialog_privacy_cancel">不同意</string>
    <string name="dialog_privacy_sure">同意并继续</string>
    <string name="dialog_privacy_title">平台使用规则</string>
    <string name="splash_privacy_content">\t\t\t\t平台所提供的各项服务的所有权和运作权归平台所有。除法律法规或者本平台另有规定/约定外，任何单位或者个人不得将本网站的任何知识产权对象进行任何目的的使用，任何单位或个人不得以任何方式以任何文字对本站资料作全部和局部复制、转载、引用和链接，任何单位或者个人不得以任何方式引诱、要求本网站注册用户或者第三方复制转载本网站内容或者同意该单位或者个人复制转载本网站内容，亦不得通过技术手段抓取本网站内容。任何注册用户将在本网站注册用户名和密码提供给任何第三方用于许可其复制本站内容的，将构成对注册协议的违反，并可能导致其账户被关闭或者处罚。 会员保证不会将已发表于本站的信息资料，以任何形式发布或授权其它网站（及媒体）使用。任何违反本站知识产权声明的行为，本站保留追究其行为人法律责任的权利。</string>

    <!--login-->
    <string name="login">登录</string>
    <string name="login_by_sms">验证码登录</string>
    <string name="login_by_password">密码登录</string>
    <string name="login_sms_fail">收不到验证码？</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_phone_hint">输入手机号登录</string>
    <string name="login_digits_phone">1234567890</string>
    <string name="login_sms_hint">输入验证码</string>
    <string name="login_sms_action">发送验证码</string>
    <string name="login_sms_countdown">获取验证码(%d)</string>
    <string name="login_password_hint">输入密码</string>
    <string name="login_protocol_tips">我已阅读并同意</string>
    <string name="login_protocol_link_1">《用户协议》</string>
    <string name="login_protocol_link_2">《隐私政策》</string>
    <string name="login_protocol_link_3">《儿童隐私政策》</string>
    <string name="login_toast_phone">请输入手机号码</string>
    <string name="login_toast_short">请正确输入手机号码</string>
    <string name="login_toast_sms">请输入验证码</string>
    <string name="login_toast_pwd">请输入密码</string>
    <string name="login_toast_pwd_min">输入密码长度不能小于6位</string>
    <string name="login_toast_pwd_max">输入密码长度不能大于20位</string>
    <string name="login_toast_same">两次输入密码不一致</string>
    <string name="login_toast_protocol">请阅读并同意《用户协议》《隐私协议》和《儿童隐私政策》</string>
    <!--主页-->
    <string name="home_detail">详情</string>
    <string name="home_setting">个人中心</string>
    <string name="home_tab_0">兑换课程</string>
    <string name="home_tab_1">进步榜样</string>
    <string name="home_tab_2">更新通知</string>
    <string name="home_one_title">物理\n十分通</string>
    <string name="home_two_title">科学故事</string>
    <string name="home_three_title">物理\n万问</string>
    <string name="home_four_title">龙门\n题库</string>

    <string name="setting_protocol_user">用户协议</string>
    <string name="setting_protocol_privacy">隐私协议</string>
    <string name="setting_protocol_child">儿童隐私政策</string>
    <string name="setting_protocol_version">当前版本</string>
    <string name="setting_login_pwd">登录密码</string>
    <string name="setting_look">查看</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_logoff">注销账户</string>

    <string name="password_tips">设置密码|密码为6–20个数字、英文字母组合</string>
    <string name="password_new_hint">输入新密码</string>
    <string name="password_confirm_hint">确认新密码</string>

    <string name="video_empty_title">返回首页</string>
    <string name="video_empty_question">挑战%s</string>
    <string name="video_empty_action">自动进入%s</string>
    <string name="video_empty_countdown">%dS</string>


    <string name="dialog_tips_title">温馨提醒</string>
    <string name="dialog_unregister">确定要注销账号吗？注销后您将无法使用该账号，并且个人信息将无法找回。</string>
    <string name="dialog_logout_title">退出登录</string>
    <string name="dialog_logout_subtitle">确定要退出登录吗？</string>
    <string name="dialog_logout_msg">您的数据随账号保存</string>

    <string name="dialog_question_title">@string/dialog_tips_title</string>
    <string name="dialog_exchange_title">兑换课程</string>
    <string name="dialog_question_subtitle">哎呀，来早啦</string>
    <string name="dialog_exchange_subtitle">哎呀，您还未开课哟～</string>
    <string name="dialog_question_msg">暂时还不能探索</string>
    <string name="dialog_exchange_msg">请先兑换课程后再学习</string>
    <string name="dialog_exchange_cancel">联系客服</string>
    <string name="dialog_exchange_sure">@string/dialog_exchange_title</string>

    <string name="dialog_exchange_other_pro">请先</string>
    <string name="dialog_exchange_other_nex">后再学习</string>

    <string name="dialog_upgrade_title">新版本</string>
    <string name="dialog_upgrade_subtitle">✨新版本上线啦！</string>
    <string name="dialog_upgrade_msg">请去应用商店下载最新版本！🚀</string>
    <string name="dialog_i_know">我知道啦</string>

    <string name="choose_title_sex">选择性别</string>
    <string name="choose_title_grade">选择年级</string>
    <string name="choose_title_area">选择地区</string>

    <string name="man">男</string>
    <string name="woman">女</string>

    <string name="setting_sex">性别</string>
    <string name="setting_man">男生</string>
    <string name="setting_women">女生</string>
    <string name="setting_nick_label">昵称</string>
    <string name="setting_nick">取一个独一无二的昵称吧</string>
    <string name="setting_area_label">地区</string>
    <string name="setting_school_label">学校</string>
    <string name="setting_grade_label">年级</string>
    <string name="setting_pwd_label">登录密码</string>
    <string name="setting_pwd">设置/修改密码</string>
    <string name="setting_account">用户账号：%s</string>

    <string name="input_address_details_hint">请填写街道、楼牌号等</string>
    <string name="input_consignee_hint">请输入收货人姓名</string>
    <string name="input_consignee_phone_hint">请输入收货人手机号</string>
    <string name="input_consignee_city_hint">请选择省市区/县</string>
    <string name="consignee_city">所在地区</string>
    <string name="consignee">收货人</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="default_use_address">每次下单会默认使用此地址</string>
    <string name="save">保存</string>
    <string name="add_address">添加地址</string>
    <string name="phone">手机号</string>
    <string name="address_details">详细地址</string>
    <string name="sure_delete_address">是否确认删除此地址？</string>
    <string name="privacy_title">我已阅读并同意</string>
    <string name="user_privacy">《用户协议》</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="privacy_child">《儿童隐私政策》</string>
    <string name="and">和</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_tab_video">视频课程</string>
    <string name="setting_tab_audio">音频课程</string>
    <string name="setting_tab_gift">赠品</string>
</resources>