<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_login">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            style="@style/Style.Image.Back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/contentBg"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:background="@drawable/bg_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="@fraction/content_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="@fraction/content_width" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_120"
            android:layout_marginStart="@dimen/dp_27"
            android:layout_marginBottom="@dimen/margin_default"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_login_a"
            app:layout_constraintBottom_toBottomOf="@+id/contentBg"
            app:layout_constraintStart_toStartOf="@+id/contentBg"
            app:layout_constraintTop_toTopOf="@+id/contentBg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPwdTips"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_20"
            android:layout_marginBottom="@dimen/margin_default_half"
            android:gravity="center_vertical|start"
            android:text="@string/password_tips"
            android:textAppearance="@style/Text.Tips"
            app:layout_constraintBottom_toTopOf="@id/etPhone"
            app:layout_constraintEnd_toEndOf="@+id/etSMS"
            app:layout_constraintStart_toStartOf="@+id/etPhone" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPhone"
            style="@style/Style.Edit.Phone"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default_half"
            android:textColor="@color/text_color_default"
            android:textColorHint="@color/text_color_hint"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toStartOf="@+id/etSMS"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toTopOf="@+id/contentBg"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_weight="1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSMS"
            style="@style/Style.Edit.SMS"
            android:layout_height="@dimen/dp_0"
            android:layout_marginStart="@dimen/margin_default_half"
            android:layout_marginEnd="@dimen/dp_50"
            android:textColor="@color/text_color_default"
            android:textColorHint="@color/text_color_hint"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/etPhone"
            app:layout_constraintEnd_toEndOf="@+id/contentBg"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/etPhone"
            app:layout_constraintTop_toTopOf="@+id/etPhone" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/Style.Edit.Password"
            android:layout_marginTop="@dimen/margin_default_half"
            android:hint="@string/password_new_hint"
            android:textColor="@color/text_color_default"
            android:textColorHint="@color/text_color_hint"
            app:layout_constraintBottom_toTopOf="@+id/etPasswordConfirm"
            app:layout_constraintEnd_toEndOf="@+id/etSMS"
            app:layout_constraintStart_toStartOf="@+id/etPhone"
            app:layout_constraintTop_toBottomOf="@+id/etPhone"
            app:layout_constraintVertical_weight="1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPasswordConfirm"
            style="@style/Style.Edit.Password"
            android:layout_marginTop="@dimen/margin_default_half"
            android:hint="@string/password_confirm_hint"
            android:textColor="@color/text_color_default"
            android:textColorHint="@color/text_color_hint"
            app:layout_constraintBottom_toTopOf="@+id/btConfirm"
            app:layout_constraintEnd_toEndOf="@+id/etSMS"
            app:layout_constraintStart_toStartOf="@+id/etPhone"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_weight="1" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btConfirm"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:textAppearance="@style/Text.Button"
            app:layout_constraintBottom_toBottomOf="@id/contentBg"
            app:layout_constraintEnd_toEndOf="@id/etSMS"
            app:layout_constraintStart_toStartOf="@id/etPhone"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordConfirm"
            app:layout_constraintVertical_weight="1.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSmsSend"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_0"
            android:gravity="center_vertical|end"
            android:minWidth="@dimen/dp_110"
            android:paddingHorizontal="@dimen/margin_default"
            android:text="@string/login_sms_action"
            android:textAppearance="@style/Text.Label"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@id/etSMS"
            app:layout_constraintEnd_toEndOf="@+id/etSMS"
            app:layout_constraintTop_toTopOf="@+id/etSMS" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>