<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:layout_margin="@dimen/margin_default"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_15"
            app:cardElevation="@dimen/dp_2"
            app:cardMaxElevation="@dimen/dp_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/dp_8"
                    android:textAppearance="@style/Text.Title.Tips"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/app_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTips"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_0"
                    android:layout_marginBottom="?attr/actionBarSize"
                    android:gravity="center"
                    android:padding="@dimen/margin_default"
                    android:textAppearance="@style/Text.Tips.Dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    tools:text="@string/app_name" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btCancel"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default_half"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:background="@drawable/line_cbcbcb_6_1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAppearance="@style/Text.Button.Cancel"
                    android:textColor="@color/color_999999"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btSure"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/btSure"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginStart="@dimen/margin_default_half"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:background="@drawable/shape_3769f3_6"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textAppearance="@style/Text.Button.Cancel"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/btCancel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>